# MailGuard

./: .gitignore  README.md  pyproject.toml
examples/: suspicious.eml
mailguard/: cli.py  folder_scan.py  headers.py  json_report.py  parser.py  report.py  scoring.py
mailguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_parser.py
