[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailguard"
version = "0.1.0"
description = "A defensive email investigation CLI for suspicious .eml files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0"
]

[project.scripts]
mailguard = "mailguard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]